fixed text align issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,6 @@
   border-radius: 0;
 }
 
-.privacy-policy p {
-  text-align: left !important;
-}
-
 a:hover {
   color: #444;
   text-decoration: none !important;
